# msrc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  platformio.ini  rpm_volt_sensor.cpp  rpm_volt_sensor.h  rpm_volt_sensor.ino
.github/: copilot-instructions.md
binaries/: MSRC-RP2040.uf2
board/: CMakeLists.txt
board/freertos/: CMakeLists.txt  FreeRTOSConfig.h
board/project/: CMakeLists.txt  airspeed.c  airspeed.h  auto_offset.c  auto_offset.h  bmp180.c  bmp180.h  bmp280.c  bmp280.h  capture_edge.c  capture_edge.h  castle_link.c  castle_link.h  castle_link.pio  cell_count.c  cell_count.h  common.c  common.h  config.c  config.h  constants.h  current.c  current.h  dbg_rb.c  dbg_rb.h  dbg_task.c  dbg_task.h  distance.c  distance.h  esc_apd_f.c  esc_apd_f.h  esc_apd_hv.c  esc_apd_hv.h  esc_castle.c  esc_hw3.c  esc_hw3.h  esc_hw4.c  esc_hw4.h  esc_kontronik.c  esc_kontronik.h  (+54 more)
board/project/pio/: CMakeLists.txt  capture_edge.c  capture_edge.h  capture_edge.pio  castle_link.c  castle_link.h  castle_link.pio  i2c_multi.c  i2c_multi.h  i2c_multi.pio  uart_rx.c  uart_rx.h  uart_rx.pio  uart_tx.c  uart_tx.h  uart_tx.pio  ws2812.c  ws2812.h
board/project/protocol/: CMakeLists.txt  crsf.c  crsf.h  fbus.c  fbus.h  fport.c  fport.h  frsky_d.c  frsky_d.h  ghst.c  ghst.h  hitec.c  hitec.h  hott.c  hott.h  ibus.c  ibus.h  jetiex.c  jetiex.h  jetiex_sensor.c  jetiex_sensor.h  jr_dmss.c  jr_dmss.h  jr_propo.c  jr_propo.h  multiplex.c  multiplex.h  pixhawk.c  pixhawk.h  sanwa.c  sanwa.h  sbus.c  sbus.h  smartport.c  smartport.h  srxl.c  srxl.h  srxl2.c  srxl2.h  xbus.c  (+1 more)
board/project/sensor/: CMakeLists.txt  ads7830.c  ads7830.h  airspeed.c  airspeed.h  auto_offset.c  auto_offset.h  bmp180.c  bmp180.h  bmp280.c  bmp280.h  cell_count.c  cell_count.h  current.c  current.h  distance.c  distance.h  esc_apd_f.c  esc_apd_f.h  esc_apd_hv.c  esc_apd_hv.h  esc_castle.c  esc_castle.h  esc_flycolor.c  esc_flycolor.h  esc_hw3.c  esc_hw3.h  esc_hw4.c  esc_hw4.h  esc_hw5.c  esc_hw5.h  esc_kontronik.c  esc_kontronik.h  esc_omp_m4.c  esc_omp_m4.h  esc_openyge.c  esc_openyge.h  esc_pwm.c  esc_pwm.h  esc_vbar.c  (+35 more)
build-msrc_gui-Desktop-Debug/: msrc_gui
case/: MSRC_case_zero-Lower case.stl  MSRC_case_zero-Upper case.stl  MSRC_case_zero.3mf  MSRC_case_zero.FCStd  MSRC_case_zero_PLA_1h27m.gcode
docs/: embedded_architecture_review.md
esc_smartport/: Esc.cpp  Esc.h  Smartport.cpp  Smartport.h  esc_smartport.cpp  esc_smartport.h  esc_smartport.ino
include/: shared.h
lua/: MSRC.lua  escSp.lua  msrc.lua  signature.lua
msrc/: bmp.cpp  bmp.h  bmp180.cpp  bmp180.h  bmp280.cpp  bmp280.h  bn220.cpp  bn220.h  config.h  configeeprom.cpp  configeeprom.h  constants.h  current.cpp  current.h  device.cpp  device.h  escApdF.cpp  escApdF.h  escApdHV.cpp  escApdHV.h  escCastle.cpp  escCastle.h  escCell.cpp  escCell.h  escHW3.cpp  escHW3.h  escHW4.cpp  escHW4.h  escKontronik.cpp  escKontronik.h  escPWM.cpp  escPWM.h  formatData.cpp  formatData.h  frsky_d.cpp  frsky_d.h  functions.cpp  functions.h  hardserial.cpp  hardserial.h  (+38 more)
msrc_gui/: 1.cfg  circuitdialog.cpp  circuitdialog.h  circuitdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msrc_gui  msrc_gui.pro  msrc_gui.pro.user.01ccaf8  msrc_gui.pro.user.650dab8  resources.qrc
msrc_gui_web/: README.md  index.html  manifest.json  sw.js
project/: auto_offset.c  auto_offset.h  bmp280.c  bmp280.h  capture_edge.c  capture_edge.pio  castle_link.c  common.h  config.h  constants.h  distance.c  distance.h  esc_apd_hv.c  esc_apd_hv.h  esc_castle.h  esc_hw3.h  esc_kontronik.c  esc_pwm.h  frsky_d.c  frsky_d.h  ibus.h  jetiex.c  jetiex.h  ms5611.c  ms5611.h  nmea.c  nmea.h  ntc.c  pwm_out.c  sbus.c  uart_rx.h  uart_rx.pio  usb.c  voltage.c  voltage.h  vspeed.c
(+32 files in other folders)
